<resources>
    <string name="app_name">HealthApp</string>

    <string name="title1">Basic Rules Of Food Eating From India\'s Top Health Coach Luke Coutinho</string>
    <string name="description1">Luke Coutinho explains the basic rules of food eating and how should one follow a healthy lifestyle. Luke Coutinho is a globally renowned Holistic Lifestyle Coach in the field of Integrative Medicine. He is also a health guru and is known for being a Bollywood fitness trainer.
                #health #diet</string>
    <string name="title2">A minute of full nutrition tips from Ryan Fernando</string>
    <string name="description2">Celebrity nutritionist Ryan Fernando reveals top nutrition secrets in a minute.</string>
    <string name="title3">LIFE-CHANGING HABITS FOR 2024</string>
    <string name="description3">As we step into 2024, let\'s embark on a journey of well-being together! As your nutritionist, I\'m here to share some healthy tips to make this year your healthiest yet. </string>
    <string name="title4">What Does Professor Tim Spector Eat in a Day?</string>
    <string name="description4">Ever wondered how conducting the world’s largest ongoing study of nutrition impacts what you eat? Well, wonder no more as ZOE’s Scientific co-founder @tim.spector invites us into his home to share his go-to meals to nourish his unique biology.</string>
    <string name="title5">The 5 things you NEED to know for better GUT HEALTH with Professor Tim Spector</string>
    <string name="description5">ZOE co-founder and microbiome expert Professor Tim Spector takes us through the 5 foundations he lives by for optimal gut health.
        As Tim explains, your gut health is absolutely crucial for your overall health, from your immune system to your hormones and even appetite regulation.</string>

</resources>